fixed spacing

--- a/perseria_django/perseria_django/static/main.css
+++ b/perseria_django/perseria_django/static/main.css
@@ -505,8 +505,8 @@ input[placeholder], [placeholder], *[placeholder]
 	
 	width: 100%;
 	
-	padding-top: 5%;
-	padding-left: 5%;
+	padding-top: 2%;
+	padding-left: 2%;
 	margin-bottom: 1%;
 }
 
